# vllm-itl

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: minimax_m27_nvfp4_vllm_token_itl.json
docs/: vllm_0151_integration.md
tests/: test_alignment.py  test_compat.py  test_config.py  test_hf_proposer.py  test_serve.py  test_vllm_proposer.py
vllm_itl/: __init__.py  alignment.py  config.py  hf_proposer.py  prob_mapping.py  result.py  tokenization.py
vllm_itl/cli/: preflight.py  serve.py
vllm_itl/vllm/: __init__.py  compat.py  plugin.py  proposer.py
